debug permissions of ssh key file

--- a/hetzner_server_management/create_server/tasks/hetzner_management.yml
+++ b/hetzner_server_management/create_server/tasks/hetzner_management.yml
@@ -111,6 +111,9 @@
         owner: root
         group: root
 
+    - name: Debug permissions of ssh key file
+      ansible.builtin.shell: ls -la {{ github_workspace }}/.ssh/
+
     - name: Read in vpn ssh key
       ansible.builtin.shell: |
         cat {{ github_workspace }}/.ssh/vpn_ssh_key.pub
