--- a/hetzner_server_management/molecule/default/cleanup.yml
+++ b/hetzner_server_management/molecule/default/cleanup.yml
@@ -26,7 +26,7 @@
         - name: Delete vpn ssh key
           hetzner.hcloud.hcloud_ssh_key:
             name: vpn_ssh_key
-            api_token: "{{ hetzner_token }}"
+            api_token: "{{ lookup('ansible.builtin.env', 'hetzner_token') }}"
             state: absent
           when: type == "vpn"
 
@@ -40,7 +40,7 @@
         - name: Delete minecraft ssh key
           hetzner.hcloud.hcloud_ssh_key:
             name: minecraft_ssh_key
-            api_token: "{{ hetzner_token }}"
+            api_token: "{{ lookup('ansible.builtin.env', 'hetzner_token') }}"
             state: absent
           when: type == "minecraft"
 
