--- a/hetzner_server_management/create_server/tasks/hetzner_management.yml
+++ b/hetzner_server_management/create_server/tasks/hetzner_management.yml
@@ -151,12 +151,14 @@
         name: "{{ server_name }}"  # vpn or minecraft
         api_token: "{{ hetzner_token }}"
         state: absent
-    - name: Generate an OpenSSH keypair for server
-      community.crypto.openssh_keypair:
-        path: "{{ github_workspace }}/.ssh/{{ server_ssh_key }}"
-        type: ed25519
-        owner: root
-        group: root
+
+- name: Generate an OpenSSH keypair for server
+  community.crypto.openssh_keypair:
+    path: "{{ github_workspace }}/.ssh/{{ server_ssh_key }}"
+    type: ed25519
+    owner: root
+    group: root
+  when: server_info.hcloud_server_info[0].name is undefined
 
 - name: Change permissions of ssh key file
   ansible.builtin.file:
