change permissions to ssh key file based on location (github ci or docker container) part 2

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,11 +50,12 @@ jobs:
 
       - name: Run Molecule tests
         working-directory: ./hetzner_server_management
-        run: molecule -vvvvv test
+        run: molecule test
         env:
           hetzner_token: ${{ secrets.HETZNER_TOKEN }}
           duckdns_token: ${{ secrets.DUCKDNS_TOKEN }}
           duckdns_domain_vpn: ${{ secrets.DUCKDNS_DOMAIN_VPN }}
           duckdns_domain_minecraft: ${{ secrets.DUCKDNS_DOMAIN_MINECRAFT }}
+          in_container: false
           PY_COLORS: '1'
           ANSIBLE_FORCE_COLOR: '1'
