change permissions to ssh key file based on location (github ci or docker container) part 3

--- a/hetzner_server_management/create_server/tasks/hetzner_management.yml
+++ b/hetzner_server_management/create_server/tasks/hetzner_management.yml
@@ -165,7 +165,7 @@
     path: "{{ github_workspace }}/.ssh/{{ server_ssh_key }}"
     mode: 0644
   become: true
-  when: not lookup('ansible.builtin.env', 'in_container')
+  when: lookup('ansible.builtin.env', 'in_container') == "false"
 
 - name: Change permissions of ssh key file (docker container)
   ansible.builtin.file:
