--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -56,6 +56,6 @@ jobs:
           duckdns_token: ${{ secrets.DUCKDNS_TOKEN }}
           duckdns_domain_vpn: ${{ secrets.DUCKDNS_DOMAIN_VPN }}
           duckdns_domain_minecraft: ${{ secrets.DUCKDNS_DOMAIN_MINECRAFT }}
-          in_container: false
+          in_container: 'false'
           PY_COLORS: '1'
           ANSIBLE_FORCE_COLOR: '1'
