change permissions to ssh key file based on location (github ci or docker container) part 5

--- a/hetzner_server_management/create_server/tasks/hetzner_management.yml
+++ b/hetzner_server_management/create_server/tasks/hetzner_management.yml
@@ -166,6 +166,7 @@
     mode: 0600
   become: true
   when: lookup('ansible.builtin.env', 'in_container')
+  changed_when: false
 
 - name: Change permissions of ssh key file (github actions)
   ansible.builtin.file:
@@ -173,6 +174,7 @@
     mode: 0644
   become: true
   when: lookup('ansible.builtin.env', 'in_container') == "false"
+  changed_when: false
 
 - name: Read in ssh key
   ansible.builtin.shell: |
