--- a/hetzner_server_management/molecule/default/molecule.yml
+++ b/hetzner_server_management/molecule/default/molecule.yml
@@ -12,7 +12,7 @@ platforms:
 provisioner:
   name: ansible
   options:
-    extra-vars: "type=vpn location=ash"
+    # extra-vars: "type=vpn location=ash"
     inventory_file: create_server/inventory.yml
   playbooks:
     cleanup: cleanup.yml
