--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,8 +33,8 @@ jobs:
           PY_COLORS: '1'
           ANSIBLE_FORCE_COLOR: '1'
 
-  test:
-    name: Test
+  test_vpn_server:
+    name: Test VPN server
     runs-on: ubuntu-latest
     needs: lint
     steps:
@@ -55,6 +55,40 @@ jobs:
         working-directory: ./hetzner_server_management
         run: molecule test
         env:
+          type: vpn
+          location: ash
+          hetzner_token: ${{ secrets.HETZNER_TOKEN }}
+          duckdns_token: ${{ secrets.DUCKDNS_TOKEN }}
+          duckdns_domain_vpn: ${{ secrets.DUCKDNS_DOMAIN_VPN }}
+          duckdns_domain_minecraft: ${{ secrets.DUCKDNS_DOMAIN_MINECRAFT }}
+          in_container: 'false'
+          PY_COLORS: '1'
+          ANSIBLE_FORCE_COLOR: '1'
+
+  test_minecraft_server:
+    name: Test minecraft server
+    runs-on: ubuntu-latest
+    needs: lint
+    steps:
+      - name: Check out the codebase
+        uses: actions/checkout@v3
+
+      - name: Set up Python 3.
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.x'
+          cache: 'pip'
+      - run: pip install -r requirements.txt
+
+      - name: Install test dependencies
+        run: pip3 install ansible molecule[docker] docker
+
+      - name: Run Molecule tests
+        working-directory: ./hetzner_server_management
+        run: molecule test
+        env:
+          type: minecraft
+          location: nbg1
           hetzner_token: ${{ secrets.HETZNER_TOKEN }}
           duckdns_token: ${{ secrets.DUCKDNS_TOKEN }}
           duckdns_domain_vpn: ${{ secrets.DUCKDNS_DOMAIN_VPN }}
