--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "discord.js": "^13.6.0",
     "dotenv": "^16.0.0",
     "glob": "^7.2.0",
-    "puppeteer": "^13.5.1"
+    "puppeteer": "^13.5.1",
+    "simple-barrier": "^1.0.4"
   },
   "devDependencies": {
     "@types/glob": "^7.2.0",
